	*** RELEASE 8.4.7 ***

2008-10-05  Bruno coudoin  <bruno.coudoin@free.fr>

	* boards/wordsgame/default-he.xml: Created Hebrew words by Jorge Mariano.

2008-09-23  Bruno coudoin  <bruno.coudoin@free.fr>

	Bug http://bugzilla.gnome.org/show_bug.cgi?id=520829
	* boards/voices/nl/misc/click_on_letter.ogg: rerecorded by
	  original author Marina Snaaijer

2008-09-21  Bruno coudoin  <bruno.coudoin@free.fr>

	Zohra Coudoin recorded most activities introduction in French
	and English.
	Now when you enter an activity it is explained.
	* boards/voices/fr/intro/*
	* boards/voices/en/intro/*
	* fr/alphabet/'all_letters'.ogg have been remade by Zohra.

2008-09-17  Bruno coudoin  <bruno.coudoin@free.fr>

	Rerecoded Somalian costa_rica.ogg by Mohamed I. Mursal
	* voices/so/geography/costa_rica.ogg

2008-09-02  Bruno coudoin  <bruno.coudoin@free.fr>

	Added more levels to the babyshape activity. This levels are based
	on famous paintings, the children must drag missing part of the paintings
	back to their proper places.
	This is a contribution of Marc Levivier (malev free fr):

	* boards/babyshapes.xml.in:
	* boards/babyshapes/Makefile.am:
	* boards/babyshapes/board8_0.xml.in:
	* boards/babyshapes/board8_1.xml.in:
	* boards/babyshapes/board8_2.xml.in:
	* boards/babyshapes/board8_3.xml.in:
	* boards/babyshapes/board8_4.xml.in:

2008-09-02  Bruno coudoin  <bruno.coudoin@free.fr>

	Now when the level is won the red point are hidden to let the children
	appreciate the art work. Commit #3524.

	* src/boards/shapegame.c: (process_ok), (target_point_hide):

2008-08-31  Bruno coudoin  <bruno.coudoin@free.fr>

	* src/boards/clickgame.c: (clickgame_next_level): Fixed the zoom level that was too low at level 2

2008-08-19  Bruno coudoin  <bruno.coudoin@free.fr>

	Added support for Ukrainian by Ivan Onyshchuk.

	* configure.in:
	* po/ChangeLog:
	* po/uk.po:
	* src/gcompris/config.c:

	*** RELEASE 8.4.6 ***

2008-08-07  Bruno coudoin  <bruno.coudoin@free.fr>