@@ -38,6 +38,11 @@ boards/babyshapes/board4_0.xml.in
 boards/babyshapes/board5_0.xml.in
 boards/babyshapes/board6_0.xml.in
 boards/babyshapes/board7_0.xml.in
+boards/babyshapes/board8_0.xml.in
+boards/babyshapes/board8_1.xml.in
+boards/babyshapes/board8_2.xml.in
+boards/babyshapes/board8_3.xml.in
+boards/babyshapes/board8_4.xml.in
 boards/ballcatch.xml.in
 boards/bargame.xml.in
 boards/billard.xml.in
